-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1, 5.3.1
-
None
-
Debian 7, Gnome 3.4.2
-
qtbase#5.4: 6cd12577572b9685603e9df14612a73162f29c35
How to reproduce:
- build and run qtbase/examples/widgets/dialogs/standarddialogs
- Press "QFileDialog::getExistingDirectory()".
- Note how the dialog gets focus correctly.
- Close the file dialog.
- Press "QFileDialog::getExistingDirectory()" again.
- Note how the dialog does NOT get focus anymore.
After the first time, the file dialog will never get focus when it's opened.
The situation is worse if there's a full-screen application, for example the gnome terminal, running in the background: after pressing the "QFileDialog::getExistingDirectory()" gnome-terminal will get the active window and you'll have to Alt-Tab back to your application.
Using non-native dialogs doesn't show this behavior.
Non-Qt apps that use native dialogs don't show this behavior.